<resources>
    <string name="app_name">Ejercicio01_ComponentesBasicos</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="equalSigne">=</string>
    <string name="substractionSigne">-</string>
    <string name="bSume">+</string>
    <string name="resutado">RESUTADO</string>
    <string name="ejercicio01_componentesbasicos">Ejercicio01_ComponentesBasicos</string>
    <string name="clean">CLEAN</string>
</resources>